--- a/configs/train/train_sd2gan.yaml
+++ b/configs/train/train_sd2gan.yaml
@@ -73,7 +73,7 @@ opt_kwargs:
 
 mixed_precision: bf16
 seed: 310
-max_train_steps: 3000000
+max_train_steps: 50000
 gradient_accumulation_steps: 4
 gradient_checkpointing: true
 max_grad_norm: 1.0
