--- a/configs/train/train_sd2gan_video.yaml
+++ b/configs/train/train_sd2gan_video.yaml
@@ -6,7 +6,7 @@ dataset:
   train:
     batch_size: 1
     num_workers: 96
-    target: gqvr.dataset.spc_video.SlidingLatentVideoDataset
+    target: gqvr.dataset.spc_video_streaming.SlidingLatentVideoDataset
     params:
       file_list: /home/argar/apgi/gQVR/dataset_txt_files/video_dataset_txt_files/saved_latents_vids.txt
       file_backend_cfg:
@@ -21,7 +21,7 @@ dataset:
   val:
     batch_size: 1
     num_workers: 96
-    target: gqvr.dataset.spc_video.SlidingLatentVideoDataset
+    target: gqvr.dataset.spc_video_streaming.SlidingLatentVideoDataset
     params:
       file_list: /home/argar/apgi/gQVR/dataset_txt_files/video_dataset_txt_files/saved_latents_vids_val.txt
       file_backend_cfg:
