--- a/configs/train/train_sd2gan_video.yaml
+++ b/configs/train/train_sd2gan_video.yaml
@@ -79,10 +79,13 @@ opt_kwargs:
 
 mixed_precision: bf16
 seed: 310
-max_train_steps: 500000
+max_train_steps: 100000
 checkpointing_steps: 1000
 checkpoints_total_limit: None
 resume_from_checkpoint: ~
-log_image_steps: 500
-log_every: 1000
+log_image_steps: 1000
+log_every: 500
 val_every: 5000
+resume_training: True
+resume_ckpt_path: "/home/argar/apgi/gQVR/experiments_video/checkpoints/tempStab_0005000.pt"
+                 
