--- a/environment.yml
+++ b/environment.yml
@@ -1,289 +1,188 @@
-name: control
+name: hypir
 channels:
-  - pytorch
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - asttokens=3.0.0=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - blas=1.0=mkl
-  - brotli-python=1.0.9=py38h6a678d5_8
+  - asttokens=3.0.0=pyhd8ed1ab_1
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2025.6.15=hbd8a1cb_0
-  - certifi=2024.8.30=py38h06a4308_0
-  - charset-normalizer=3.3.2=pyhd3eb1b0_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - cudatoolkit=11.3.1=h2bc3f7f_2
-  - debugpy=1.6.7=py38h6a678d5_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=2.1.0=pyhd8ed1ab_0
-  - ffmpeg=4.3=hf484d3e_0
-  - freetype=2.13.3=h4a9f257_0
-  - gmp=6.3.0=h6a678d5_0
-  - gnutls=3.6.15=he1e5248_0
-  - idna=3.7=py38h06a4308_0
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=8.12.2=pyh41d4057_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jpeg=9e=h5eee18b_3
-  - jupyter_client=7.3.4=pyhd8ed1ab_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
+  - comm=0.2.3=pyhe01879c_0
+  - debugpy=1.8.11=py310h6a678d5_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - executing=2.2.0=pyhd8ed1ab_0
+  - expat=2.7.1=h6a678d5_0
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - ipykernel=6.30.1=pyh82676e8_0
+  - ipython=8.37.0=pyh8f84b5b_0
+  - jedi=0.19.2=pyhd8ed1ab_1
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
   - jupyter_core=5.8.1=pyh31011fe_0
-  - lame=3.100=h7b6447c_0
-  - lcms2=2.16=hb9589c4_0
   - ld_impl_linux-64=2.40=h12ee557_0
-  - lerc=4.0.0=h6a678d5_0
-  - libdeflate=1.22=h5eee18b_0
-  - libffi=3.3=he6710b0_2
+  - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h5eee18b_3
-  - libidn2=2.3.4=h5eee18b_0
-  - libpng=1.6.39=h5eee18b_0
   - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=11.2.0=h1234567_1
-  - libtasn1=4.19.0=h5eee18b_0
-  - libtiff=4.5.1=hffd6297_1
-  - libunistring=0.9.10=h27cfd23_0
-  - libwebp-base=1.3.2=h5eee18b_1
-  - lz4-c=1.9.4=h6a678d5_1
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py38h7f8727e_0
-  - mkl_fft=1.3.1=py38hd3c417c_0
-  - mkl_random=1.2.2=py38h51133e4_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libxcb=1.17.0=h9b100fa_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - nettle=3.7.3=hbbd107a_1
-  - numpy=1.23.1=py38h6c91a56_0
-  - numpy-base=1.23.1=py38ha15fc14_0
-  - openh264=2.1.1=h4ff587b_0
-  - openjpeg=2.5.2=he7f1fd0_0
-  - openssl=1.1.1w=h7f8727e_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - openssl=3.0.17=h5eee18b_0
   - packaging=25.0=pyh29332c3_1
-  - parso=0.8.4=pyhd8ed1ab_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=10.4.0=py38h5eee18b_0
-  - pip=20.3.3=py38h06a4308_0
-  - platformdirs=4.3.6=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.48=pyha770c72_0
-  - prompt_toolkit=3.0.48=hd8ed1ab_1
-  - psutil=5.9.1=py38h0a891b7_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
-  - pysocks=1.7.1=py38h06a4308_0
-  - python=3.8.5=h7579374_1
-  - python_abi=3.8=2_cp38
-  - pytorch-mutex=1.0=cuda
-  - pyzmq=25.1.2=py38h6a678d5_0
+  - parso=0.8.4=pyhd8ed1ab_1
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
+  - pip=25.1=pyhc872135_2
+  - platformdirs=4.3.8=pyhe01879c_0
+  - prompt-toolkit=3.0.51=pyha770c72_0
+  - pthread-stubs=0.3=h0ce48e5_1
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pygments=2.19.2=pyhd8ed1ab_0
+  - python=3.10.18=h1a3bd86_0
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python_abi=3.10=2_cp310
+  - pyzmq=26.2.0=py310h6a678d5_0
   - readline=8.2=h5eee18b_0
-  - requests=2.32.3=py38h06a4308_0
-  - setuptools=75.1.0=py38h06a4308_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.45.3=h5eee18b_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.14=h39e8969_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
-  - urllib3=2.2.3=py38h06a4308_0
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.44.0=py38h06a4308_0
+  - setuptools=78.1.1=py310h06a4308_0
+  - six=1.17.0=pyhe01879c_1
+  - sqlite=3.50.2=hb25bd0a_1
+  - stack_data=0.6.3=pyhd8ed1ab_1
+  - tk=8.6.14=h993c535_1
+  - tornado=6.5.1=py310h5eee18b_0
+  - traitlets=5.14.3=pyhd8ed1ab_1
+  - typing_extensions=4.14.1=pyhe01879c_0
+  - wcwidth=0.2.13=pyhd8ed1ab_1
+  - wheel=0.45.1=py310h06a4308_0
+  - xorg-libx11=1.8.12=h9b100fa_1
+  - xorg-libxau=1.0.12=h9b100fa_0
+  - xorg-libxdmcp=1.1.5=h9b100fa_0
+  - xorg-xorgproto=2024.1=h5eee18b_1
   - xz=5.6.4=h5eee18b_1
   - zeromq=4.3.5=h6a678d5_0
+  - zipp=3.23.0=pyhd8ed1ab_0
   - zlib=1.2.13=h5eee18b_1
-  - zstd=1.5.6=hc292b87_0
   - pip:
-      - absl-py==2.2.2
-      - accelerate==1.0.1
-      - addict==2.4.0
-      - aiofiles==24.1.0
-      - aiohappyeyeballs==2.4.4
-      - aiohttp==3.10.11
-      - aiosignal==1.3.1
-      - albumentations==1.3.0
-      - altair==5.4.1
+      - absl-py==2.3.1
+      - accelerate==1.10.0
+      - aiofiles==23.2.1
       - annotated-types==0.7.0
-      - antlr4-python3-runtime==4.8
-      - anyio==4.5.2
-      - async-timeout==5.0.1
-      - attrs==25.3.0
-      - backports-zoneinfo==0.2.1
-      - basicsr==1.4.2
-      - bitsandbytes==0.45.5
-      - blinker==1.8.2
-      - braceexpand==0.1.7
-      - cachetools==5.5.2
-      - cfgv==3.4.0
-      - click==8.1.8
-      - colorama==0.4.6
-      - contourpy==1.1.1
+      - antialiased-cnns==0.3
+      - antlr4-python3-runtime==4.9.3
+      - anyio==4.9.0
+      - beautifulsoup4==4.13.4
+      - certifi==2025.7.14
+      - charset-normalizer==3.4.2
+      - click==8.2.1
+      - contourpy==1.3.2
+      - correlation==0.0.0
       - cycler==0.12.1
-      - datasets==3.1.0
       - decord==0.6.0
-      - diffusers==0.34.0
-      - dill==0.3.8
-      - distlib==0.3.9
-      - einops==0.3.0
-      - exceptiongroup==1.3.0
-      - facexlib==0.3.0
-      - fastapi==0.115.12
-      - fastchat==0.1.0
-      - ffmpy==0.5.0
-      - filelock==3.16.1
-      - filterpy==1.4.5
-      - fonttools==4.57.0
-      - frozenlist==1.5.0
-      - fsspec==2024.9.0
-      - ftfy==6.2.3
-      - future==1.0.0
-      - gitdb==4.0.12
-      - gitpython==3.1.44
-      - google-auth==2.40.1
-      - google-auth-oauthlib==1.0.0
-      - gradio==3.16.2
-      - grpcio==1.70.0
+      - diffusers==0.32.2
+      - distro==1.9.0
+      - einops==0.8.1
+      - fastapi==0.116.1
+      - ffmpy==0.6.1
+      - filelock==3.18.0
+      - fonttools==4.59.0
+      - fsspec==2025.7.0
+      - ftfy==6.3.1
+      - gdown==4.4.0
+      - gradio==5.21.0
+      - gradio-client==1.7.2
+      - groovy==0.1.2
+      - grpcio==1.74.0
       - h11==0.16.0
+      - hf-xet==1.1.5
       - httpcore==1.0.9
       - httpx==0.28.1
-      - huggingface-hub==0.31.2
-      - icecream==2.1.5
-      - identify==2.6.1
-      - imageio==2.9.0
-      - imageio-ffmpeg==0.4.2
-      - importlib-metadata==8.5.0
-      - importlib-resources==6.4.5
-      - iniconfig==2.1.0
-      - invisible-watermark==0.2.0
+      - huggingface-hub==0.34.3
+      - idna==3.10
+      - imageio==2.37.0
+      - imageio-ffmpeg==0.6.0
+      - ipdb==0.13.13
       - jinja2==3.1.6
-      - joblib==1.4.2
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2023.12.1
-      - kiwisolver==1.4.7
-      - kornia==0.6.0
-      - lazy-loader==0.4
-      - linkify-it-py==2.0.3
-      - llvmlite==0.41.1
-      - lmdb==1.6.2
+      - jiter==0.10.0
+      - kiwisolver==1.4.9
       - lpips==0.1.4
-      - markdown==3.7
+      - markdown==3.8.2
       - markdown-it-py==3.0.0
       - markupsafe==2.1.5
-      - matplotlib==3.7.5
-      - mdit-py-plugins==0.4.2
+      - matplotlib==3.10.5
       - mdurl==0.1.2
+      - moviepy==2.2.1
       - mpmath==1.3.0
-      - multidict==6.1.0
-      - multiprocess==0.70.16
-      - narwhals==1.39.1
-      - networkx==3.1
+      - networkx==3.4.2
       - ninja==1.11.1.4
-      - nodeenv==1.9.1
-      - numba==0.58.1
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-cupti-cu12==12.1.105
-      - nvidia-cuda-nvrtc-cu12==12.1.105
-      - nvidia-cuda-runtime-cu12==12.1.105
+      - numpy==2.2.6
+      - nvidia-cublas-cu12==12.4.5.8
+      - nvidia-cuda-cupti-cu12==12.4.127
+      - nvidia-cuda-nvrtc-cu12==12.4.127
+      - nvidia-cuda-runtime-cu12==12.4.127
       - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.0.2.54
-      - nvidia-curand-cu12==10.3.2.106
-      - nvidia-cusolver-cu12==11.4.5.107
-      - nvidia-cusparse-cu12==12.1.0.106
-      - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.9.86
-      - nvidia-nvtx-cu12==12.1.105
-      - oauthlib==3.2.2
-      - omegaconf==2.1.1
-      - open-clip-torch==2.0.2
-      - openai-clip==1.0.1
-      - opencv-contrib-python==4.3.0.36
-      - opencv-python==4.11.0.86
+      - nvidia-cufft-cu12==11.2.1.3
+      - nvidia-curand-cu12==10.3.5.147
+      - nvidia-cusolver-cu12==11.6.1.9
+      - nvidia-cusparse-cu12==12.3.1.170
+      - nvidia-cusparselt-cu12==0.6.2
+      - nvidia-nccl-cu12==2.21.5
+      - nvidia-nvjitlink-cu12==12.4.127
+      - nvidia-nvtx-cu12==12.4.127
+      - omegaconf==2.3.0
+      - open-clip-torch==2.31.0
+      - openai==1.96.1
       - opencv-python-headless==4.11.0.86
-      - orjson==3.10.15
-      - pandas==2.0.3
-      - pkgutil-resolve-name==1.3.10
-      - pluggy==1.5.0
-      - polars==1.8.2
-      - pre-commit==3.5.0
-      - prettytable==3.6.0
-      - propcache==0.2.0
-      - protobuf==3.20.3
-      - pyarrow==17.0.0
-      - pyasn1==0.6.1
-      - pyasn1-modules==0.4.2
-      - pycryptodome==3.22.0
+      - orjson==3.11.1
+      - pandas==2.3.1
+      - peft==0.14.0
+      - pillow==11.3.0
+      - polars==1.24.0
+      - proglog==0.1.12
+      - protobuf==6.31.1
+      - psutil==7.0.0
       - pydantic==2.10.6
       - pydantic-core==2.27.2
-      - pydeck==0.9.1
-      - pydeprecate==0.3.1
       - pydub==0.25.1
-      - pygments==2.19.1
-      - pyiqa==0.1.14.1
-      - pympler==1.1
-      - pyparsing==3.1.4
-      - pytest==8.3.5
-      - python-dateutil==2.9.0.post0
+      - pyparsing==3.2.3
+      - pysocks==1.7.1
+      - python-dotenv==1.1.1
       - python-multipart==0.0.20
-      - pytorch-lightning==1.5.0
       - pytz==2025.2
-      - pywavelets==1.4.1
       - pyyaml==6.0.2
-      - qudida==0.0.4
-      - referencing==0.35.1
-      - regex==2024.11.6
-      - requests-oauthlib==2.0.0
-      - rich==14.0.0
-      - rpds-py==0.20.1
-      - rsa==4.9.1
-      - ruamel-yaml==0.18.14
-      - ruamel-yaml-clib==0.2.8
-      - ruff==0.12.3
+      - regex==2025.7.33
+      - requests==2.32.4
+      - rich==14.1.0
+      - ruff==0.12.7
+      - safehttpx==0.1.6
       - safetensors==0.5.3
-      - scikit-image==0.20.0
-      - scikit-learn==1.3.2
-      - scipy==1.9.1
-      - semver==3.0.4
-      - sentencepiece==0.2.0
-      - smmap==5.0.2
+      - scipy==1.15.3
+      - semantic-version==2.10.0
+      - shellingham==1.5.4
       - sniffio==1.3.1
-      - starlette==0.44.0
-      - streamlit==1.12.1
-      - streamlit-drawable-canvas==0.8.0
-      - sympy==1.13.3
-      - tensorboard==2.14.0
+      - soupsieve==2.7
+      - starlette==0.47.2
+      - sympy==1.13.1
+      - tenacity==9.1.2
+      - tensorboard==2.19.0
       - tensorboard-data-server==0.7.2
-      - termcolor==2.4.0
-      - test-tube==0.7.5
-      - threadpoolctl==3.5.0
-      - tifffile==2023.7.10
-      - timm==1.0.16
-      - tokenizers==0.15.2
-      - toml==0.10.2
+      - timm==1.0.15
+      - tokenizers==0.21.4
       - tomli==2.2.1
-      - torch==2.4.1
-      - torchmetrics==0.6.0
-      - torchsummary==1.5.1
-      - torchvision==0.19.1
-      - tornado==6.4.2
+      - tomlkit==0.13.3
+      - torch==2.6.0
+      - torch-summary==1.4.5
+      - torchvision==0.21.0
       - tqdm==4.67.1
-      - transformers==4.37.2
-      - triton==3.0.0
-      - typing-extensions==4.13.2
+      - transformers==4.49.0
+      - triton==3.2.0
+      - typer==0.16.0
       - tzdata==2025.2
-      - tzlocal==5.2
-      - uc-micro-py==1.0.3
-      - uvicorn==0.33.0
-      - validators==0.34.0
-      - virtualenv==20.31.2
-      - watchdog==4.0.2
-      - webdataset==0.2.5
-      - websockets==13.1
-      - werkzeug==3.0.6
-      - xxhash==3.5.0
-      - yapf==0.32.0
-      - yarl==1.15.2
-      - zipp==3.20.2
-prefix: /home/argar/miniconda3/envs/control
+      - urllib3==2.5.0
+      - uvicorn==0.35.0
+      - vision-aided-loss==0.1.0
+      - websockets==15.0.1
+      - werkzeug==3.1.3
