--- a/environment.yml
+++ b/environment.yml
@@ -1,188 +1,237 @@
-name: hypir
+name: sd35
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
+  - nodefaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - asttokens=3.0.0=pyhd8ed1ab_1
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2025.8.3=hbd8a1cb_0
-  - comm=0.2.3=pyhe01879c_0
-  - debugpy=1.8.11=py310h6a678d5_0
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - exceptiongroup=1.3.0=pyhd8ed1ab_0
-  - executing=2.2.0=pyhd8ed1ab_0
-  - expat=2.7.1=h6a678d5_0
-  - importlib-metadata=8.7.0=pyhe01879c_1
-  - ipykernel=6.30.1=pyh82676e8_0
-  - ipython=8.37.0=pyh8f84b5b_0
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.8.1=pyh31011fe_0
+  - ca-certificates=2025.7.15=h06a4308_0
   - ld_impl_linux-64=2.40=h12ee557_0
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
-  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
   - libxcb=1.17.0=h9b100fa_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - openssl=3.0.17=h5eee18b_0
-  - packaging=25.0=pyh29332c3_1
-  - parso=0.8.4=pyhd8ed1ab_1
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pip=25.1=pyhc872135_2
-  - platformdirs=4.3.8=pyhe01879c_0
-  - prompt-toolkit=3.0.51=pyha770c72_0
+  - ncurses=6.5=h7934f7d_0
+  - openssl=1.1.1w=h7f8727e_0
+  - pip=25.2=pyhc872135_0
   - pthread-stubs=0.3=h0ce48e5_1
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - pygments=2.19.2=pyhd8ed1ab_0
-  - python=3.10.18=h1a3bd86_0
-  - python-dateutil=2.9.0.post0=pyhe01879c_2
-  - python_abi=3.10=2_cp310
-  - pyzmq=26.2.0=py310h6a678d5_0
-  - readline=8.2=h5eee18b_0
-  - setuptools=78.1.1=py310h06a4308_0
-  - six=1.17.0=pyhe01879c_1
+  - python=3.11.0=h7a1cb2a_3
+  - readline=8.3=hc2a1206_0
+  - setuptools=80.9.0=pyhff2d567_0
   - sqlite=3.50.2=hb25bd0a_1
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - tk=8.6.14=h993c535_1
-  - tornado=6.5.1=py310h5eee18b_0
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - typing_extensions=4.14.1=pyhe01879c_0
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - wheel=0.45.1=py310h06a4308_0
+  - tk=8.6.15=h54e0aa7_0
+  - wheel=0.45.1=py311h06a4308_0
   - xorg-libx11=1.8.12=h9b100fa_1
   - xorg-libxau=1.0.12=h9b100fa_0
   - xorg-libxdmcp=1.1.5=h9b100fa_0
   - xorg-xorgproto=2024.1=h5eee18b_1
   - xz=5.6.4=h5eee18b_1
-  - zeromq=4.3.5=h6a678d5_0
-  - zipp=3.23.0=pyhd8ed1ab_0
   - zlib=1.2.13=h5eee18b_1
   - pip:
       - absl-py==2.3.1
-      - accelerate==1.10.0
-      - aiofiles==23.2.1
+      - accelerate==1.10.1
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.12.15
+      - aiosignal==1.4.0
       - annotated-types==0.7.0
       - antialiased-cnns==0.3
       - antlr4-python3-runtime==4.9.3
-      - anyio==4.9.0
-      - beautifulsoup4==4.13.4
-      - certifi==2025.7.14
-      - charset-normalizer==3.4.2
+      - anyio==4.10.0
+      - asttokens==3.0.0
+      - atomicwrites==1.4.1
+      - attrs==25.3.0
+      - av==15.1.0
+      - beautifulsoup4==4.13.5
+      - bitsandbytes==0.47.0
+      - boto3==1.40.32
+      - botocore==1.40.32
+      - certifi==2025.8.3
+      - chardet==5.2.0
+      - charset-normalizer==3.4.3
       - click==8.2.1
-      - contourpy==1.3.2
-      - correlation==0.0.0
-      - cycler==0.12.1
-      - decord==0.6.0
-      - diffusers==0.32.2
-      - distro==1.9.0
+      - clip-interrogator==0.6.0
+      - colorama==0.4.6
+      - compel==2.1.1
+      - dataproperty==1.1.0
+      - datasets==4.1.0
+      - decorator==5.2.1
+      - deepspeed==0.17.5
+      - diffusers==0.35.1
+      - dill==0.4.0
+      - dnspython==2.8.0
       - einops==0.8.1
-      - fastapi==0.116.1
-      - ffmpy==0.6.1
-      - filelock==3.18.0
-      - fonttools==4.59.0
-      - fsspec==2025.7.0
+      - email-validator==2.3.0
+      - evaluate==0.4.5
+      - executing==2.2.1
+      - fastapi==0.116.2
+      - fastapi-cli==0.0.11
+      - fastapi-cloud-cli==0.1.5
+      - filelock==3.19.1
+      - frozenlist==1.7.0
+      - fsspec==2025.9.0
       - ftfy==6.3.1
       - gdown==4.4.0
-      - gradio==5.21.0
-      - gradio-client==1.7.2
-      - groovy==0.1.2
-      - grpcio==1.74.0
+      - gitdb==4.0.12
+      - gitpython==3.1.45
+      - grpcio==1.75.0
       - h11==0.16.0
-      - hf-xet==1.1.5
+      - hf-xet==1.1.10
+      - hjson==3.1.0
       - httpcore==1.0.9
+      - httptools==0.6.4
       - httpx==0.28.1
-      - huggingface-hub==0.34.3
+      - huggingface-hub==0.35.0
       - idna==3.10
       - imageio==2.37.0
       - imageio-ffmpeg==0.6.0
+      - importlib-metadata==8.7.0
       - ipdb==0.13.13
+      - ipython==9.5.0
+      - ipython-pygments-lexers==1.1.1
+      - iterutils==0.1.6
+      - jedi==0.19.2
       - jinja2==3.1.6
-      - jiter==0.10.0
-      - kiwisolver==1.4.9
+      - jmespath==1.0.1
+      - joblib==1.5.2
+      - jsonlines==4.0.0
+      - lightning-utilities==0.15.2
+      - lm-eval==0.4.9
       - lpips==0.1.4
-      - markdown==3.8.2
-      - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
-      - matplotlib==3.10.5
+      - lxml==6.0.1
+      - lycoris-lora==3.2.0.post2
+      - markdown==3.9
+      - markdown-it-py==4.0.0
+      - markupsafe==3.0.2
+      - matplotlib-inline==0.1.7
+      - mbstrdecoder==1.1.4
       - mdurl==0.1.2
-      - moviepy==2.2.1
+      - more-itertools==10.8.0
       - mpmath==1.3.0
-      - networkx==3.4.2
-      - ninja==1.11.1.4
+      - msgpack==1.1.1
+      - multidict==6.6.4
+      - multiprocess==0.70.16
+      - networkx==3.5
+      - ninja==1.13.0
+      - nltk==3.9.1
+      - numexpr==2.12.1
       - numpy==2.2.6
-      - nvidia-cublas-cu12==12.4.5.8
-      - nvidia-cuda-cupti-cu12==12.4.127
-      - nvidia-cuda-nvrtc-cu12==12.4.127
-      - nvidia-cuda-runtime-cu12==12.4.127
-      - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.2.1.3
-      - nvidia-curand-cu12==10.3.5.147
-      - nvidia-cusolver-cu12==11.6.1.9
-      - nvidia-cusparse-cu12==12.3.1.170
-      - nvidia-cusparselt-cu12==0.6.2
-      - nvidia-nccl-cu12==2.21.5
-      - nvidia-nvjitlink-cu12==12.4.127
-      - nvidia-nvtx-cu12==12.4.127
+      - nvidia-cublas-cu12==12.8.4.1
+      - nvidia-cuda-cupti-cu12==12.8.90
+      - nvidia-cuda-nvrtc-cu12==12.8.93
+      - nvidia-cuda-runtime-cu12==12.8.90
+      - nvidia-cudnn-cu12==9.10.2.21
+      - nvidia-cufft-cu12==11.3.3.83
+      - nvidia-cufile-cu12==1.13.1.3
+      - nvidia-curand-cu12==10.3.9.90
+      - nvidia-cusolver-cu12==11.7.3.90
+      - nvidia-cusparse-cu12==12.5.8.93
+      - nvidia-cusparselt-cu12==0.7.1
+      - nvidia-nccl-cu12==2.27.3
+      - nvidia-nvjitlink-cu12==12.8.93
+      - nvidia-nvtx-cu12==12.8.90
       - omegaconf==2.3.0
-      - open-clip-torch==2.31.0
-      - openai==1.96.1
-      - opencv-python-headless==4.11.0.86
-      - orjson==3.11.1
-      - pandas==2.3.1
-      - peft==0.14.0
+      - open-clip-torch==3.1.0
+      - opencv-python==4.12.0.88
+      - optimum-quanto==0.2.7
+      - packaging==25.0
+      - pandas==2.3.2
+      - parso==0.8.5
+      - pathvalidate==3.3.1
+      - peft==0.17.1
+      - peft-singlora==0.2.0
+      - pexpect==4.9.0
       - pillow==11.3.0
-      - polars==1.24.0
-      - proglog==0.1.12
-      - protobuf==6.31.1
+      - platformdirs==4.4.0
+      - polars==1.33.1
+      - portalocker==3.2.0
+      - prodigy-plus-schedule-free==2.0.0
+      - prompt-toolkit==3.0.52
+      - propcache==0.3.2
+      - protobuf==6.32.1
       - psutil==7.0.0
-      - pydantic==2.10.6
-      - pydantic-core==2.27.2
-      - pydub==0.25.1
-      - pyparsing==3.2.3
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.3
+      - py-cpuinfo==9.0.0
+      - pyarrow==21.0.0
+      - pybind11==3.0.1
+      - pydantic==2.11.9
+      - pydantic-core==2.33.2
+      - pygments==2.19.2
+      - pyparsing==3.2.4
       - pysocks==1.7.1
+      - pytablewriter==1.2.1
+      - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.1
       - python-multipart==0.0.20
       - pytz==2025.2
       - pyyaml==6.0.2
-      - regex==2025.7.33
-      - requests==2.32.4
+      - regex==2025.9.1
+      - requests==2.32.5
       - rich==14.1.0
-      - ruff==0.12.7
-      - safehttpx==0.1.6
-      - safetensors==0.5.3
-      - scipy==1.15.3
-      - semantic-version==2.10.0
+      - rich-toolkit==0.15.1
+      - rignore==0.6.4
+      - rouge-score==0.1.2
+      - s3transfer==0.14.0
+      - sacrebleu==2.5.1
+      - safetensors==0.6.2
+      - scikit-learn==1.7.2
+      - scipy==1.16.2
+      - sentencepiece==0.2.1
+      - sentry-sdk==2.38.0
       - shellingham==1.5.4
+      - simpletuner==2.2.1
+      - six==1.17.0
+      - smmap==5.0.2
       - sniffio==1.3.1
-      - soupsieve==2.7
-      - starlette==0.47.2
-      - sympy==1.13.1
-      - tenacity==9.1.2
-      - tensorboard==2.19.0
+      - soupsieve==2.8
+      - sqlitedict==2.1.0
+      - stack-data==0.6.3
+      - starlette==0.48.0
+      - sympy==1.14.0
+      - tabledata==1.3.4
+      - tabulate==0.9.0
+      - tcolorpy==0.1.7
+      - tensorboard==2.20.0
       - tensorboard-data-server==0.7.2
-      - timm==1.0.15
-      - tokenizers==0.21.4
-      - tomli==2.2.1
-      - tomlkit==0.13.3
-      - torch==2.6.0
-      - torch-summary==1.4.5
-      - torchvision==0.21.0
+      - threadpoolctl==3.6.0
+      - timm==1.0.19
+      - tokenizers==0.22.0
+      - toml==0.10.2
+      - torch==2.8.0
+      - torch-optimi==0.3.2
+      - torchao==0.13.0
+      - torchaudio==2.8.0
+      - torchmetrics==1.8.2
+      - torchsde==0.2.6
+      - torchvision==0.23.0
       - tqdm==4.67.1
-      - transformers==4.49.0
-      - triton==3.2.0
-      - typer==0.16.0
+      - tqdm-multiprocess==0.0.11
+      - trainingsample==0.2.1
+      - traitlets==5.14.3
+      - trampoline==0.1.2
+      - transformers==4.56.1
+      - triton==3.4.0
+      - typepy==1.3.4
+      - typer==0.17.4
+      - typing-extensions==4.15.0
+      - typing-inspection==0.4.1
       - tzdata==2025.2
-      - urllib3==2.5.0
+      - urllib3==1.26.20
       - uvicorn==0.35.0
+      - uvloop==0.21.0
       - vision-aided-loss==0.1.0
+      - wandb==0.21.4
+      - watchfiles==1.1.0
+      - wcwidth==0.2.13
       - websockets==15.0.1
       - werkzeug==3.1.3
+      - word2number==1.1
+      - xxhash==3.5.0
+      - yarl==1.20.1
+      - zipp==3.23.0
+      - zstandard==0.25.0
+prefix: /nobackup/aryan/.conda/envs/sd35
