--- a/configs/train/train_burst.yaml
+++ b/configs/train/train_burst.yaml
@@ -66,11 +66,11 @@ lifting_training: true
 qvae_path: "/media/agarg54/Extreme SSD/weights/gqvr_sd21/3bit_vae_10xlr_8xBS/0600000.pt"
 
 # Loss params
-loss_mode: "gt_perceptual_lsa" # "flow" must | optional: ["l1", "perceptual", "lsa"] 
+loss_mode: "gt_perceptual_lsa" # ["gt", "perceptual", "lsa"] 
 loss_scales:
-  l1: 1.
+  l1: 5.
   perceptual: 50.
-  lsa: 0.1
+  lsa: 0.5
 
 
 lr_burst_model: 1e-5
