--- a/configs/train/train_burst.yaml
+++ b/configs/train/train_burst.yaml
@@ -1,4 +1,4 @@
-output_dir: /media/agarg54/Extreme SSD/code/gQVR/experiments_burst_fusionVIT
+output_dir: /media/agarg54/Extreme SSD/code/gQVR/experiments_burst_fusionVIT_noUnet
 
 dataset:
   batch_transform:
@@ -68,9 +68,9 @@ qvae_path: "/media/agarg54/Extreme SSD/weights/gqvr_sd21/3bit_vae_10xlr_8xBS/060
 # Loss params
 loss_mode: "gt_perceptual_lsa" # ["gt", "perceptual", "lsa"] 
 loss_scales:
-  l1: 5.
-  perceptual: 50.
-  lsa: 0.5
+  l1: 50.
+  perceptual: 15.
+  lsa: 10.
 
 
 lr_burst_model: 1e-5
@@ -87,7 +87,7 @@ resume_from_checkpoint: ~
 log_every: 500
 resume_training: False
 
-use_unet: true
+use_unet: false
 base_model_path: ByteDance/sd2.1-base-zsnr-laionaes5
 model_t: 200
 coeff_t: 200
