--- a/configs/train/train_sd2gan.yaml
+++ b/configs/train/train_sd2gan.yaml
@@ -1,16 +1,16 @@
-output_dir: /home/argar/apgi/gQVR/experiments
+output_dir: /nobackup1/aryan/weights
 
 
 dataset:
   train:
-    batch_size: 2
-    dataloader_num_workers: 96
+    batch_size: 1
+    dataloader_num_workers: 24
     target: gqvr.dataset.spc_image_only.SPCDataset
     params:
-      file_list: /mnt/disks/behemoth/datasets/dataset_txt_files/combined_dataset.txt
+      file_list: /media/agarg54/Extreme SSD/dataset_files/combined_dataset.txt
       file_backend_cfg:
         target: gqvr.dataset.file_backend.HardDiskBackend
-      out_size: 512
+      out_size: 256
       crop_type: "center"
       use_hflip: False
     batch_transform:
@@ -21,10 +21,10 @@ dataset:
     dataloader_num_workers: 96
     target: gqvr.dataset.spc_image_only.SPCDataset
     params:
-      file_list: /mnt/disks/behemoth/datasets/dataset_txt_files/random_val.txt
+      file_list: /mnt/disks/behemoth/datasets/dataset_txt_files/full_test_set.txt
       file_backend_cfg:
         target: gqvr.dataset.file_backend.HardDiskBackend
-      out_size: 512
+      out_size: 256
       crop_type: "center"
       use_hflip: False
     batch_transform:
@@ -37,7 +37,7 @@ model:
     ddconfig:
       double_z: true
       z_channels: 4
-      resolution: 512
+      resolution: 256
       in_channels: 3
       out_ch: 3
       ch: 128
@@ -54,12 +54,12 @@ prompt_training: false
 lifting_training: false
 base_model_type: sd2
 base_model_path: ByteDance/sd2.1-base-zsnr-laionaes5
-qvae_path: /home/argar/apgi/gQVR/experiments/3bit_vae_10xlr_8xBS/0600000.pt
+qvae_path: /media/agarg54/Extreme SSD/weights/gqvr_sd21/3bit_vae_10xlr_8xBS/0600000.pt
 model_t: 200
 coeff_t: 200
 lora_rank: 256
 lora_modules: [to_k, to_q, to_v, to_out.0, conv, conv1, conv2, conv_shortcut, conv_out, proj_in, proj_out, ff.net.2, ff.net.0.proj]
-use_ema: true
+use_ema: false
 ema_decay: 0.999
 resume_ema: true
 
@@ -74,9 +74,9 @@ opt_kwargs:
 
 mixed_precision: bf16
 seed: 310
-max_train_steps: 50000
-gradient_accumulation_steps: 4
-gradient_checkpointing: true
+max_train_steps: 100000
+gradient_accumulation_steps: 1
+gradient_checkpointing: false
 max_grad_norm: 1.0
 logging_dir: logs
 report_to: tensorboard
