--- a/configs/inference/eval_3bit_mono.yaml
+++ b/configs/inference/eval_3bit_mono.yaml
@@ -1,7 +1,7 @@
 # qVAE config:    
 model:
   vae_cfg:
-    qvae_path: /media/agarg54/Extreme SSD/weights/gqvr_sd21/3bit_vae_10xlr_8xBS/0600000.pt
+    qvae_path: /nobackup1/aryan/weights/continue_VAE_UA/checkpoints/0150000.pt
     embed_dim: 4
     ddconfig:
       double_z: true
@@ -23,7 +23,7 @@ model:
 base_model_type: sd2
 base_model_path: ByteDance/sd2.1-base-zsnr-laionaes5
 weight_path: /media/agarg54/Extreme SSD/weights/gqvr_sd21/checkpoints_stage2_nullprompt/checkpoint-30000/state_dict.pth
-qvae_path: /media/agarg54/Extreme SSD/weights/gqvr_sd21/3bit_vae_10xlr_8xBS/0600000.pt
+qvae_path: /nobackup1/aryan/weights/continue_VAE_UA/checkpoints/0150000.pt
 model_t: 200
 coeff_t: 200
 lora_rank: 256
