--- a/configs/inference/eval_3bit_color.yaml
+++ b/configs/inference/eval_3bit_color.yaml
@@ -1,7 +1,7 @@
 # qVAE config:    
 model:
   vae_cfg:
-    qvae_path: /nobackup1/aryan/weights/continue_VAE_UA_mosaic/checkpoints/0108000.pt
+    qvae_path: /nobackup1/aryan/weights/continue_VAE_UA_mosaic/checkpoints/0105000.pt
     embed_dim: 4
     ddconfig:
       double_z: true
@@ -22,8 +22,8 @@ model:
 # prompt_training: true
 base_model_type: sd2
 base_model_path: ByteDance/sd2.1-base-zsnr-laionaes5
-weight_path: /media/agarg54/Extreme SSD/weights/gqvr_sd21/mosaic_3bit_Stage2_SD21/checkpoints/checkpoint-10000/state_dict.pth
-qvae_path: /nobackup1/aryan/weights/continue_VAE_UA_mosaic/checkpoints/0108000.pt
+weight_path: /nobackup1/aryan/weights/stage2_sd21_mosaic/checkpoints/checkpoint-100000/state_dict.pth
+qvae_path: /nobackup1/aryan/weights/continue_VAE_UA_mosaic/checkpoints/0105000.pt
 model_t: 200
 coeff_t: 200
 lora_rank: 256
