--- a/configs/train/train_burst_mosaic.yaml
+++ b/configs/train/train_burst_mosaic.yaml
@@ -1,4 +1,4 @@
-output_dir: /media/agarg54/Extreme SSD/code/gQVR/experiments_burst
+output_dir: /media/agarg54/Extreme SSD/code/gQVR/experiments_stage3
 
 dataset:
   batch_transform:
@@ -13,8 +13,8 @@ dataset:
         target: gqvr.dataset.file_backend.HardDiskBackend
       out_size: 512
       crop_type: "center"
-      use_hflip: False
-      precomputed_latents: True
+      use_hflip: false
+      precomputed_latents: false
       sliding_window: 10
       chunk_size: 11
       mosaic: true
@@ -27,12 +27,13 @@ dataset:
       file_list: /home/argar/apgi/gQVR/dataset_txt_files/video_dataset_txt_files/saved_latents_vids_val.txt
       file_backend_cfg:
         target: gqvr.dataset.file_backend.HardDiskBackend
-      out_size: 512
+      out_size: 256
       crop_type: "center"
-      use_hflip: False
+      use_hflip: false
       precomputed_latents: false
-      sliding_window: 10
-      chunk_size: 11
+      sliding_window: 28
+      chunk_size: 30
+      mosaic: true
     batch_transform:
       target: gqvr.dataset.batch_transform.IdentityBatchTransform
 
@@ -62,15 +63,16 @@ model:
       dropout: 0.0
 
 prompt_training: false
-lifting_training: true
-qvae_path: "/media/agarg54/Extreme SSD/weights/gqvr_sd21/mosaic_3bit_Stage1_SD21/checkpoints/0250000.pt"
+lifting_training: false
+qvae_path: /nobackup1/aryan/weights/continue_VAE_UA_mosaic/checkpoints/0105000.pt
 
 # Loss params
-loss_mode: "gt_perceptual" # "flow" must | optional: ["l1", "perceptual"] 
+loss_mode: "lsa_mse_perceptual" # ["gt", "perceptual", "lsa"] 
 loss_scales:
-  l1: 1.
-  perceptual: 50.
-  mse: 0.
+  l1: 0.
+  perceptual: 2.5
+  lsa: 0.1
+  mse: 10.
 
 
 lr_burst_model: 1e-5
@@ -80,13 +82,17 @@ opt_kwargs:
 
 mixed_precision: bf16
 seed: 310
-max_train_steps: 100000
-checkpointing_steps: 1000
+max_train_steps: 500000
+checkpointing_steps: 2500
 checkpoints_total_limit: None
 resume_from_checkpoint: ~
-log_image_steps: 1000
 log_every: 500
-val_every: 1000
 resume_training: False
 
-with_unet: false
+train_unet: false
+unet_weight_path: /nobackup1/aryan/weights/stage2_sd21_mosaic/checkpoints/checkpoint-100000/state_dict.pth
+base_model_path: ByteDance/sd2.1-base-zsnr-laionaes5
+model_t: 200
+coeff_t: 200
+lora_rank: 256
+lora_modules: [to_k, to_q, to_v, to_out.0, conv, conv1, conv2, conv_shortcut, conv_out, proj_in, proj_out, ff.net.2, ff.net.0.proj]
